--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
 		"@sveltejs/adapter-vercel": "^5.3.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"autoprefixer": "^10.4.19",
+		"postcss": "^8.4.39",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"tailwindcss": "^3.4.6",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
@@ -24,7 +27,7 @@
 	"type": "module",
 	"dependencies": {
 		"bootstrap": "^5.3.3",
-		"mongodb": "^6.5.0",
+		"mongodb": "^6.8.0",
 		"nodemailer": "^6.9.13"
 	}
 }
