--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 	"type": "module",
 	"dependencies": {
 		"bootstrap": "^5.3.3",
+		"dotenv": "^16.4.5",
 		"mongodb": "^6.8.0",
 		"nodemailer": "^6.9.13"
 	}
