--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
 		"@sveltejs/adapter-vercel": "^5.3.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@typescript-eslint/eslint-plugin": "^7.16.1",
+		"@typescript-eslint/parser": "^7.16.1",
 		"autoprefixer": "^10.4.19",
+		"eslint": "^8.57.0",
 		"postcss": "^8.4.39",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
