--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 	"dependencies": {
 		"bootstrap": "^5.3.3",
 		"dotenv": "^16.4.5",
+		"flatpickr": "^4.6.13",
 		"mongodb": "^6.8.0",
 		"nodemailer": "^6.9.13"
 	}
