--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@typescript-eslint/parser": "^7.16.1",
 		"autoprefixer": "^10.4.19",
 		"eslint": "^8.57.0",
+		"lucia": "^3.2.0",
 		"postcss": "^8.4.39",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
@@ -29,6 +30,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@lucia-auth/adapter-mongodb": "^1.0.3",
 		"bootstrap": "^5.3.3",
 		"dotenv": "^16.4.5",
 		"mongodb": "^6.8.0",
