--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
 		"@typescript-eslint/parser": "^7.16.1",
 		"autoprefixer": "^10.4.19",
 		"eslint": "^8.57.0",
-		"postcss": "^8.4.39",
+		"lucia": "^3.2.0",
+		"postcss": "^8.4.40",
+		"prisma": "^5.17.0",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
 		"tailwindcss": "^3.4.6",
@@ -29,6 +31,8 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@lucia-auth/adapter-prisma": "^4.0.1",
+		"@prisma/client": "^5.17.0",
 		"bootstrap": "^5.3.3",
 		"dotenv": "^16.4.5",
 		"flatpickr": "^4.6.13",
