--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"dotenv": "^16.4.5",
 		"flatpickr": "^4.6.13",
 		"mongodb": "^6.8.0",
-		"nodemailer": "^6.9.13"
+		"nodemailer": "^6.9.13",
+		"tippy.js": "^6.3.7"
 	}
 }
