--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
 		"@sveltejs/adapter-vercel": "^5.3.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@types/blob-stream": "^0.1.33",
+		"@types/pdfmake": "^0.2.9",
 		"@typescript-eslint/eslint-plugin": "^7.16.1",
 		"@typescript-eslint/parser": "^7.16.1",
 		"autoprefixer": "^10.4.19",
@@ -39,6 +41,7 @@
 		"bootstrap": "^5.3.3",
 		"dotenv": "^16.4.5",
 		"flatpickr": "^4.6.13",
+		"jspdf": "^2.5.1",
 		"mongodb": "^6.8.0",
 		"nodemailer": "^6.9.13",
 		"tippy.js": "^6.3.7"
