--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/blob-stream": "^0.1.33",
+		"@types/jspdf": "^2.0.0",
 		"@types/pdfmake": "^0.2.9",
 		"@typescript-eslint/eslint-plugin": "^7.16.1",
 		"@typescript-eslint/parser": "^7.16.1",
@@ -42,8 +43,10 @@
 		"dotenv": "^16.4.5",
 		"flatpickr": "^4.6.13",
 		"jspdf": "^2.5.1",
+		"jspdf-autotable": "^3.8.2",
 		"mongodb": "^6.8.0",
 		"nodemailer": "^6.9.13",
+		"pdfmake": "^0.2.10",
 		"tippy.js": "^6.3.7"
 	}
 }
