--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
 		"@types/blob-stream": "^0.1.33",
 		"@types/jspdf": "^2.0.0",
 		"@types/pdfmake": "^0.2.9",
-		"@typescript-eslint/eslint-plugin": "^7.16.1",
-		"@typescript-eslint/parser": "^7.16.1",
+		"@typescript-eslint/eslint-plugin": "^8.0.1",
+		"@typescript-eslint/parser": "^8.0.1",
 		"autoprefixer": "^10.4.19",
 		"eslint": "^8.57.0",
 		"lucia": "^3.2.0",
@@ -47,7 +47,8 @@
 		"mongodb": "^6.8.0",
 		"nodemailer": "^6.9.13",
 		"pdfmake": "^0.2.10",
-		"tippy.js": "^6.3.7"
+		"tippy.js": "^6.3.7",
+		"wrangler": "^3.68.0"
 	},
 	"engines": {
 		"node": "18.18.0"
