--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@neoconfetti/svelte": "^1.0.0",
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/adapter-cloudflare": "^4.7.0",
+    "@sveltejs/adapter-netlify": "^4.3.1",
     "@sveltejs/adapter-vercel": "^5.3.0",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
