Testy bez powodzenia

--- a/package.json
+++ b/package.json
@@ -46,12 +46,16 @@
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
     "flatpickr": "^4.6.13",
+    "i18next": "^23.12.3",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-fs-backend": "^2.3.2",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "mongodb": "^6.8.0",
     "node-cron": "^3.0.0",
     "nodemailer": "^6.9.13",
     "pdfmake": "^0.2.10",
+    "svelte-i18next": "^2.2.2",
     "tippy.js": "^6.3.7",
     "wrangler": "^3.68.0"
   },
