--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@event-calendar/core": "^3.3.0",
+    "@event-calendar/day-grid": "^3.4.0",
     "@event-calendar/time-grid": "^3.2.2",
     "@fontsource/fira-mono": "^4.5.10",
     "@neoconfetti/svelte": "^1.0.0",
